# cv-detect

./: .dockerignore  .gitignore  DEMO.md  Dockerfile  README.md  docker-compose.yml  generate_demo_gifs.py  pyproject.toml  requirements.txt  test_all_functions.py
.claude/: settings.mac-arm.json  settings.unix.json
.claude/agents/: data-processor.md  python-developer.md  system-architect.md
.claude/commands/: workflow.md
.claude/hooks/: Send-TelegramNotification.ps1
.claude/scripts/: log-prompt.ps1  log-prompt.sh  log-response.ps1  log-response.sh
.github/workflows/: ci.yml
api/: .env.example  __init__.py  __main__.py  server.py
dl_anomaly/: .env.example  BUILD.bat  START.bat  __init__.py  build_mac.sh  config.py  main.py
dl_anomaly/core/: anomaly_scorer.py  autoencoder.py  barcode_engine.py  calibration.py  camera.py  dataset.py  frequency.py  halcon_ops.py  inspection_flow.py  ocr_engine.py  onnx_engine.py  parallel_pipeline.py  preprocessor.py  recipe.py  region.py  region_ops.py  report_generator.py  roi_manager.py  shape_matching.py  stitching.py  (+6 more)
docs/: _ch15_19.py  _ch1_6.py  _ch20_25.py  _ch7_13.py  architecture.md  generate_cv_tutorial.py
shared/: __init__.py  app_state.py  audit_logger.py  dashboard_panel.py  dnd_support.py  error_dialog.py  history_panel.py  i18n.py  judgment_indicator.py  live_inspection_panel.py  op_logger.py  progress_manager.py  project_manager.py  spc_alert.py  touch_mode.py  user_manager.py  validation.py
tests/: conftest.py
variation_model/: .env.example  START.bat  __init__.py  build_mac.sh  config.py  main.py
(+167 files in other folders)
